--- a/class-02-jquery-and-events/pair-assignment/starter-code/styles/base.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-code/styles/base.css
@@ -1,4 +1,4 @@
-/* TODO: Add some coordinated colors to make the blog more distinguished:
+/* Done: Add some coordinated colors to make the blog more distinguished:
          Use an accent color for all links, and remove their underline. */
 
 body {
@@ -26,7 +26,8 @@ address {
 =======================================*/
 
 a, a:link, a:active {
-  color: #777;
+  color: #F26BEA;
+  text-decoration: none;
 }
 
 a:hover, a:focus {
