--- a/class-02-jquery-and-events/pair-assignment/starter-code/styles/modules.css
+++ b/class-02-jquery-and-events/pair-assignment/starter-code/styles/modules.css
@@ -1,7 +1,8 @@
-/* TODO: Give the site header a nice background color, from your selected color scheme. */
+/* Done: Give the site header a nice background color, from your selected color scheme. */
 
 .site-header {
   padding: .1em;
+  background: #54D3F2;
 }
 
 .main-nav {
@@ -11,14 +12,19 @@
 }
 
 .main-nav li {
+  list-style: none;
   margin-right: .4em;
   font-size: 1.5em;
   padding: .5em .2em;
   border-bottom: 1px solid #ccc;
 }
 
-/* TODO: Style the filters so they look good on small screens:
+/* Done: Style the filters so they look good on small screens:
     Use the full width, and remove the list bullet. */
+
+select {
+  width: 100%;
+}
 
 #filters {
   padding: 0;
